software/PC/out/x64/Debug/ZERO_CHECK/ZERO_CHECK.vcxproj.FileListAbsolute.txt

--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 617
Content-Type: application/octet-stream
X-File-MD5: 7d748f0056f984fd8cb60cfd3d74ce28
X-File-Mtime: 1693229257
X-File-Path: /afanci/software/PC/out/x64/Debug/ALL_BUILD/ALL_BUILD.recipe

﻿<?xml version="1.0" encoding="utf-8"?>
<Project>
  <ProjectOutputs>
    <ProjectOutput>
      <FullPath>C:\Users\paulb\Documents\projects\afanci\software\PC\out\x64\Debug\ZERO_CHECK</FullPath>
    </ProjectOutput>
    <ProjectOutput>
      <FullPath>C:\Users\paulb\Documents\projects\afanci\software\PC\out\bin\Debug\afanci.exe</FullPath>
    </ProjectOutput>
    <ProjectOutput>
      <FullPath>C:\Users\paulb\Documents\projects\afanci\software\PC\out\x64\Debug\ALL_BUILD</FullPath>
    </ProjectOutput>
  </ProjectOutputs>
  <ContentFiles />
  <SatelliteDlls />
  <NonRecipeFileRefs />
</Project>
--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 122
Content-Type: application/octet-stream
X-File-MD5: f4d9699cbaeeb25f9a91f0bdbdf3aa60
X-File-Mtime: 1693229257
X-File-Path: /afanci/software/PC/out/x64/Debug/PACKAGE/PACKAGE.tlog/CustomBuild.read.1.tlog

^C:\USERS\PAULB\DOCUMENTS\PROJECTS\AFANCI\SOFTWARE\PC\OUT\CMAKEFILES\7D15EF361A3254EE136E9626B2997164\PACKAGE_FORCE.RULE

--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 205
Content-Type: application/octet-stream
X-File-MD5: 481f3015c267f78997b9e51d9ec84292
X-File-Mtime: 1693229257
X-File-Path: /afanci/software/PC/out/x64/Debug/PACKAGE/PACKAGE.tlog/CustomBuild.write.1.tlog

^C:\USERS\PAULB\DOCUMENTS\PROJECTS\AFANCI\SOFTWARE\PC\OUT\CMAKEFILES\7D15EF361A3254EE136E9626B2997164\PACKAGE_FORCE.RULE
C:\USERS\PAULB\DOCUMENTS\PROJECTS\AFANCI\SOFTWARE\PC\OUT\CMAKEFILES\PACKAGE_FORCE

--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 311
Content-Type: application/octet-stream
X-File-MD5: 5cfaf4c1a67d48aefdc59fee287cebd7
X-File-Mtime: 1693229257
X-File-Path: /afanci/software/PC/out/x64/Debug/PACKAGE/PACKAGE.tlog/CustomBuild.command.1.tlog

^C:\USERS\PAULB\DOCUMENTS\PROJECTS\AFANCI\SOFTWARE\PC\OUT\CMAKEFILES\7D15EF361A3254EE136E9626B2997164\PACKAGE_FORCE.RULE
setlocal
cd .
if %errorlevel% neq 0 goto :cmEnd
:cmEnd
endlocal & call :cmErrorLevel %errorlevel% & goto :cmDone
:cmErrorLevel
exit /b %1
:cmDone
if %errorlevel% neq 0 goto :VCEnd

--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 445
Content-Type: application/octet-stream
X-File-MD5: e23ece93d0bca2d2d5c3b73fc3bc8ca7
X-File-Mtime: 1693229257
X-File-Path: /afanci/software/PC/out/x64/Debug/ZERO_CHECK/ZERO_CHECK.Build.CppClean.log

c:\users\paulb\documents\projects\afanci\software\pc\out\cmakefiles\generate.stamp
c:\users\paulb\documents\projects\afanci\software\pc\out\x64\debug\zero_check\zero_check.tlog\custombuild.command.1.tlog
c:\users\paulb\documents\projects\afanci\software\pc\out\x64\debug\zero_check\zero_check.tlog\custombuild.read.1.tlog
c:\users\paulb\documents\projects\afanci\software\pc\out\x64\debug\zero_check\zero_check.tlog\custombuild.write.1.tlog

--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 763
Content-Type: application/octet-stream
X-File-MD5: 91b2bd48b550e6f0977bfd411492779c
X-File-Mtime: 1693229257
X-File-Path: /afanci/software/PC/out/x64/Debug/INSTALL/INSTALL.recipe

﻿<?xml version="1.0" encoding="utf-8"?>
<Project>
  <ProjectOutputs>
    <ProjectOutput>
      <FullPath>C:\Users\paulb\Documents\projects\afanci\software\PC\out\x64\Debug\ZERO_CHECK</FullPath>
    </ProjectOutput>
    <ProjectOutput>
      <FullPath>C:\Users\paulb\Documents\projects\afanci\software\PC\out\bin\Debug\afanci.exe</FullPath>
    </ProjectOutput>
    <ProjectOutput>
      <FullPath>C:\Users\paulb\Documents\projects\afanci\software\PC\out\x64\Debug\ALL_BUILD</FullPath>
    </ProjectOutput>
    <ProjectOutput>
      <FullPath>C:\Users\paulb\Documents\projects\afanci\software\PC\out\x64\Debug\INSTALL</FullPath>
    </ProjectOutput>
  </ProjectOutputs>
  <ContentFiles />
  <SatelliteDlls />
  <NonRecipeFileRefs />
</Project>
--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 1923
Content-Type: application/octet-stream
X-File-MD5: 7d334442b27b028e535f5ed49977adf0
X-File-Mtime: 1693229257
X-File-Path: /afanci/software/PC/out/x64/Debug/INSTALL/INSTALL.log

﻿  1>
  -- Install configuration: "Debug"
  -- Installing: C:/Program Files (x86)/afanci/bin/afanci.exe
  CMake Error at cmake_install.cmake:48 (file):
    file INSTALL cannot find
    "C:/Users/paulb/Documents/projects/afanci/software/PC/afanci.cpp": File
    exists.
  
  
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: The command "setlocal
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: "C:\Program Files\CMake\bin\cmake.exe" -DBUILD_TYPE=Debug -P cmake_install.cmake
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: if %errorlevel% neq 0 goto :cmEnd
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: :cmEnd
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: endlocal & call :cmErrorLevel %errorlevel% & goto :cmDone
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: :cmErrorLevel
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: exit /b %1
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: :cmDone
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: if %errorlevel% neq 0 goto :VCEnd
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.CppCommon.targets(161,5): error MSB3073: :VCEnd" exited with code 1.

--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 207
Content-Type: application/octet-stream
X-File-MD5: a582cb5c238339d5c1154a7dae9cceaa
X-File-Mtime: 1693584060
X-File-Path: /afanci/software/PC/out/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.write.1.tlog

^C:\USERS\PAULB\DOCUMENTS\PROJECTS\AFANCI\SOFTWARE\PC\OUT\CMAKEFILES\7D15EF361A3254EE136E9626B2997164\GENERATE.STAMP.RULE
C:\USERS\PAULB\DOCUMENTS\PROJECTS\AFANCI\SOFTWARE\PC\OUT\CMAKEFILES\GENERATE.STAMP

--boundary_.oOo._S+rThxTO9tpiQVoJsocr/1GZHgLVNA3H
Content-Length: 2059
Content-Type: application/octet-stream
X-File-MD5: 9f04e86f0958773448d5589813f19198
X-File-Mtime: 1693584060
X-File-Path: /afanci/software/PC/out/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.read.1.tlog

^C:\USERS\PAULB\DOCUMENTS\PROJECTS\AFANCI\SOFTWARE\PC\OUT\CMAKEFILES\7D15EF361A3254EE136E9626B2997164\GENERATE.STAMP.RULE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKECINFORMATION.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKECXXINFORMATION.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKECOMMONLANGUAGEINCLUDE.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKEGENERICSYSTEM.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKEINITIALIZECONFIGS.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKELANGUAGEINFORMATION.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKERCINFORMATION.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKESYSTEMSPECIFICINFORMATION.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\CMAKESYSTEMSPECIFICINITIALIZE.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\COMPILER\CMAKECOMMONCOMPILERMACROS.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\COMPILER\MSVC-C.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\COMPILER\MSVC-CXX.CMAKE
C:\PROGRAM FILES\CMAKE\SHARE\CMAKE-3.27\MODULES\COMPILER